Fix button styling that was applied to all .btn elements and was making the date button too big. Applied .btn-important and .btn-bold to buttons that needed it.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -237,11 +237,6 @@ main.front-form {
       font-size: 14px;
       line-height: 1.43;
     }
-    a.btn {
-      font-size: 18px;
-      text-transform: uppercase;
-      .proximasemi;
-    }
     .well.creme2 {
       background: @creme2;
       border-radius: 0;
@@ -280,8 +275,11 @@ main.front-form {
       }
     }
     input, select { margin-bottom: 10px; }
-    .btn {
+    .btn-important {
       text-transform: uppercase;
+      .proximasemi;
+    }
+    .btn-bold{
       .proximasemi;
     }
     .btn-default {
